2005-12-16  David Schleef  <ds@schleef.org>

	* libswfdec/actions.c:
	* libswfdec/actions_tags.c:
	* libswfdec/swf.c:
	* libswfdec/swfdec_render.c:
	* libswfdec/swfdec_render.h:
	* libswfdec/swfdec_render_cairo.c:
	  Add some debuggering code.  Fix some bugs:
	   - fix image translation matrix
	   - fix (finally?) how the next frame is decided
	   - assume id==0 is the main sprite
	   - fix random crashes

2005-12-16  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am:
	* libswfdec/actions_tags.c:
	* libswfdec/swf.c:
	* libswfdec/swfdec_decoder.h:
	* libswfdec/swfdec_decoder_internal.h:
	* libswfdec/swfdec_internal.h:
	  Add a function to flag running experimental code.

2005-12-16  David Schleef  <ds@schleef.org>

	* libswfdec/swfdec_button.c: (swfdec_button_dispose): Fix
	  a leak.

2005-12-05  David Schleef  <ds@schleef.org>

	* README:  The Limitations section was out of date.

2005-11-30  David Schleef  <ds@schleef.org>

	* libswfdec/js/js.c: (ZZ_formatter):
	* libswfdec/js/jsapi.c: (TryArgumentFormatter):
	* libswfdec/js/jsapi.h:
	* libswfdec/js/jspubtd.h:
	  Fix usage of 'va_list *', it's wrong and doesn't work on powerpc.
	  Noticed (and mostly fixed) by David Woodhouse.
	* player/swf_play.c:
	  Remove unnecessary header.

2005-10-25  David Schleef  <ds@schleef.org>

	* libswfdec/swfdec_button.c: Fix silly crasher and memleak.

2005-10-25  David Schleef  <ds@schleef.org>

	* libswfdec/swfdec_cache.c: New code to help with caching data.
	* libswfdec/swfdec_cache.h:
	* libswfdec/swfdec_internal.h:
	* libswfdec/Makefile.am:
	* libswfdec/swf.c:
	* libswfdec/swfdec_decoder.h:

	* libswfdec/swfdec_image.c: Use cache/handles in image decoding.
	* libswfdec/swfdec_image.h:
	* libswfdec/swfdec_render_cairo.c:
	* libswfdec/swfdec_shape.c:
	* libswfdec/swfdec_types.h:

2005-10-23  David Schleef  <ds@schleef.org>

	* libswfdec/Makefile.am:  Move almost all tag parsing code into
	  swfdec_tag.c
	* libswfdec/actions.c:
	* libswfdec/actions_builtin.c: