@@ -1,3 +1,11 @@
+2006-01-08  David Schleef  <ds@schleef.org>
+
+	* plugin/Makefile.am:
+	* plugin/gstswfdec.c:
+	* plugin/gstswfdec.h:
+	* plugin/swfdec-mozilla-player.c:
+	  Checkpoint on plugin/player fixes.
+
 2005-12-16  David Schleef  <ds@schleef.org>
 
 	* libswfdec/actions.c:
